[gd_scene load_steps=8 format=3 uid="uid://d16n6kh4l4j8o"]

[ext_resource type="Script" path="res://GUI/GUIMenuScenes/settings_menu.gd" id="1_3o0lb"]
[ext_resource type="Texture2D" uid="uid://dn46njyxsjug5" path="res://GUI/MenuBackgrounds/MenuBackgroundImage.png" id="1_sdr75"]
[ext_resource type="FontFile" uid="uid://cnqgqyunqiim5" path="res://GUI/Fonts/GlitchGoblin-2O87v.ttf" id="2_l6k4o"]
[ext_resource type="FontFile" uid="uid://b10uvsj1044em" path="res://GUI/Fonts/PixelEmulator-xq08.ttf" id="3_2a6xr"]
[ext_resource type="Theme" uid="uid://w7en7g743evq" path="res://GUI/UITheme.tres" id="4_6uyt2"]

[sub_resource type="LabelSettings" id="LabelSettings_khbuu"]
font = ExtResource("2_l6k4o")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_4one1"]
font = ExtResource("3_2a6xr")
font_size = 24
outline_size = 6
outline_color = Color(0.988235, 0.345098, 0.231373, 1)
shadow_size = 20
shadow_color = Color(0.113725, 0.329412, 0.113725, 0.0901961)

[node name="SettingsMenuCanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource("1_3o0lb")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -704.0
offset_top = -476.0
offset_right = 704.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sdr75")

[node name="Tittle" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -453.0
offset_top = 239.0
offset_right = 454.0
offset_bottom = 354.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_l6k4o")
text = "Escape Protocol"
label_settings = SubResource("LabelSettings_khbuu")

[node name="StatusLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.0
offset_top = -308.0
offset_right = -362.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
text = "Connecting..."
label_settings = SubResource("LabelSettings_4one1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -86.0
offset_right = 94.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme = ExtResource("4_6uyt2")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "     Main Menu     "

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeOptionButton" to="." method="_on_window_mode_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
